<resources>
    <string name="app_name">Delivery</string>
    <string name="profile">Profile</string>
    <string name="my_addresses">My addresses</string>
    <string name="promo_codes">Promo codes</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pone_number">Pone Number</string>
    <string name="_994554192566">+994554192566</string>
    <string name="next">Next</string>
    <string name="otp">Otp</string>
    <string name="_554192566">554192566</string>
    <string name="share_your_promo_code">Share your promo code</string>
    <string name="your_shareable_promo_code">Your shareable promo code</string>
    <string name="share">Share</string>
    <string name="my_orders">My orders</string>
    <string name="enter_new_promo_code">Enter new promo code</string>
</resources>